<resources>
    <string name="app_name">Sudokai</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="solve">Solve</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="show_image">Show image</string>
    <string name="mark_corners_of_the_sudoku">Drag and mark the correct corners of the sudoku</string>
</resources>
