<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imageDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11111177"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBarImageDialog"
        android:visibility="visible"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sudokaiImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5sp"
        android:background="@drawable/text_hint_border"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/mark_corners_of_the_sudoku"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <com.abs192.sudokai.views.SudokaiImageView
        android:id="@+id/sudokaiImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/dragger1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/sudokaiImageView"
        android:layout_alignTop="@+id/sudokaiImageView"
        android:src="@android:drawable/btn_radio"
        android:tag="@string/_1" />

    <ImageView
        android:id="@+id/dragger2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/sudokaiImageView"
        android:layout_alignEnd="@+id/sudokaiImageView"
        android:src="@android:drawable/btn_radio"
        android:tag="@string/_2" />


    <ImageView
        android:id="@+id/dragger3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/sudokaiImageView"
        android:layout_alignBottom="@+id/sudokaiImageView"
        android:src="@android:drawable/btn_radio"
        android:tag="@string/_3" />


    <ImageView
        android:id="@+id/dragger4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/sudokaiImageView"
        android:layout_alignBottom="@+id/sudokaiImageView"
        android:src="@android:drawable/btn_radio"
        android:tag="@string/_4" />


    <LinearLayout
        android:id="@+id/imageDialogLayoutControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sudokaiImageView"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageDialogLayoutDiscard"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_picture_discard" />

        <ImageButton
            android:id="@+id/imageDialogLayoutSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_picture_save" />

    </LinearLayout>

</RelativeLayout>
